<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:background="@color/background">


    <ImageView
        android:id="@+id/ivRegister"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/ivRegister"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_last_name"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        android:layout_marginTop="5dp"/>



    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_genre"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        android:layout_marginTop="20dp"
        />
    <RadioGroup
        android:id="@+id/rgGenre"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvGenre"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        >
        <RadioButton
            android:id="@+id/rbMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_male"/>

        <RadioButton
            android:id="@+id/rbWoman"
            android:layout_marginStart="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_female"/>
    </RadioGroup>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/main"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/rgGenre"
        android:layout_marginTop="20dp"
        />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="70dp" />

</androidx.constraintlayout.widget.ConstraintLayout>